<resources>
    <string name="app_name">Notice Board</string>
    <string name="title_feed">Feed</string>
    <string name="title_users">Users</string>
    <string name="title_publish">Publish</string>
    <string name="title_permission">Permission</string>
    <string name="title_profile">Profile</string>


    <string name="title_activity_login_signup">LoginSignup</string>
    <string name="tab_text_1">POLYTECHNIC</string>
    <string name="tab_text_2">TEACHER</string>
    <string name="tab_text_3">STUDENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="department_prompt">Choose Department</string>
    <string-array name="department_arrays">
        <item>All</item>
        <item>Cse</item>
        <item>Mchanical</item>
        <item>Cvil</item>
         </string-array>
    <string-array name="user_department_arrays">
        <item>Cse</item>
        <item>Mchanical</item>
        <item>Cvil</item>
    </string-array>
</resources>
